--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "angular": "^1.3.11",
+    "font-awesome": "^4.3.0",
     "jquery": "^2.1.3"
   },
   "devDependencies": {
