--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "zifferarchive",
   "version": "1.0.0",
   "description": "Ziffer Projekt Archive Site",
+  "private": true,
   "main": "index.js",
+  "repository": "https://github.com/chienius/zifferarchive.git",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Archie Lu (chienius@outlook.com)",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "angular": "^1.3.11",
     "font-awesome": "^4.3.0",
@@ -20,7 +22,7 @@
     "grunt-contrib-jade": "^0.14.1",
     "grunt-contrib-jshint": "^0.11.0",
     "grunt-contrib-stylus": "^0.20.0",
-    "grunt-contrib-uglify": "^0.7.0",
-    "grunt-contrib-watch": "^0.6.1"
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-shell": "^1.1.1"
   }
 }
